fixed squish

--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,8 @@ display: none;
 }
 
 .card img {
-    height: auto;
+    aspect-ratio: 16 / 9;
+    max-width: 448px;
 }
 
 .card-text{
@@ -484,12 +485,7 @@ body.party-mode .contact a:hover{
     .card{
         flex-direction: column-reverse;
         max-width: 480px;
-    }
-
-    .card img{
         width: 100%;
-        max-width: 470px;
-        height: auto;
     }
 
     .card-text{
@@ -548,7 +544,12 @@ body.party-mode .contact a:hover{
 }
 
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 500px){
+
+    .card img{
+        max-width: 360px;
+    }
+
     body.party-mode .splash{
         width: 100%;
         height: 1090px;
